[package]
name = "datafusion-prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
datafusion = "10.0.0"
clap = { version = "3.2.16", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
prometheus-http-query = "0.6.0"
async-trait = "0.1.41"
futures = "0.3.21"
rustyline = "10.0.0"